# Discvar

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: build-wheel.yml  documentation.yml  unittest-poetry.yml  unittest-uv.yml  version-update.yml
discvar/: __init__.py  __version__.py  abc.py  exponential.py  ho.py  sin.py  units.py
docs/: conf.py  discvar.rst  index.rst  make.bat  modules.rst
docs/notebook/: eigenstate.ipynb  tutorial.rst  visualize_basis.ipynb
