[project]
name = "discvar"
version = "0.0.2"
description = "Python implementation of discrete variable representation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "mypy>=1.12.1",
    "myst-parser>=4.0.0",
    "nbsphinx>=0.9.5",
    "pre-commit>=4.0.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.1",
]
